# smart_buildings_sim_generator

./: .gitignore  README.md  bsp_floor_plan_generator.ipynb  central_server.py  check_status.py  create_environments.ipynb  demo.ipynb  evaluate.py  floor_plan_generator.ipynb  generate_floorplans.ipynb  generate_floorplans.py  generate_site.py  pyproject.toml  requirements-frozen.txt  requirements.txt  run_baselines.py  run_baselines_parallel.py  setup_worker.sh  smart_buildings  view_buildings.ipynb  visualize.ipynb  visualize_server.py  worker_server.py
buildings/: building_0002.yaml  building_0007.yaml  building_0009.yaml  building_0012.yaml  building_0013.yaml  building_0014.yaml  building_0015.yaml  building_0016.yaml  building_0018.yaml  building_0019.yaml  building_0041.yaml  building_0042.yaml  building_0045.yaml  building_0054.yaml  building_0056.yaml  building_0057.yaml  building_0060.yaml  building_0063.yaml  building_0066.yaml  building_0067.yaml  building_0068.yaml  example_office.yaml  minimal.yaml  office_3floor.yaml
docs/: building_0002.html  building_0007.html  building_0009.html  building_0012.html  building_0013.html  building_0014.html  building_0015.html  building_0016.html  building_0018.html  building_0019.html  building_0041.html  building_0042.html  building_0045.html  building_0054.html  building_0056.html  building_0063.html  building_0066.html  building_0067.html  index.html
generated_configs/: demo_rectangle_2ahu.gin  demo_rectangle_2ahu_floor_plan.npy  demo_rectangle_2ahu_zone_map.npy  test_building.gin  test_building_floor_plan.npy  test_building_zone_map.npy
sbsim/: BUILD  MAINTAINING.md  METADATA  OWNERS  README.md
sbsim/smart_control/environment/: BUILD  conftest.py  environment.py  environment_test.py  environment_test_utils.py  (+2 more)
scenarios/: example_scenario.yaml  minimal_scenario.yaml
scenarios/minimal_test/: config.gin  config.yaml  floor_plan.npy  zone_map.npy
scenarios/summer_office_3floor/: config.gin  floor_plan.npy  zone_map.npy
weather/: cold_winter.yaml  hot_summer.yaml  mild_summer.yaml  mild_winter.yaml  temperate.yaml  tropical.yaml
(+150 files in other folders)
