[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-buildings-sim"
version = "0.1.0"
description = "Smart Buildings HVAC Simulation Generator for RL environments"
readme = "sbsim/README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Judah Goldfeder"}
]

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "tensorflow>=2.10",
    "tensorflow-probability",
    "tf-agents",
    "gin-config",
    "opencv-python",
    "protobuf",
    "pillow",
    "pytz",
    "holidays",
    "pint",
    "python-dotenv",
    "bidict",
    "requests",
    "plotly",
    "mediapy",
    "jupyter",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "absl-py",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sbsim*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
smart_buildings = "sbsim"
